# pySnake

./: .gitignore  food.py  main.py  pyproject.toml  scoreboard.py  snake.py
src/: main.py  snake.py
src/pySnake/: __main__.py  food.py  main.py  snake.py
tests/: test_snake.py
